--- a/project 1/styles2.css
+++ b/project 1/styles2.css
@@ -123,12 +123,12 @@
     align-items: center;
 }
 .videos-title {
-font-size: 2.8rem;
-  color: #7b1fa2;
-  margin-bottom: 40px;
-  font-weight: bold;
+    font-size: 2.8rem;
+    color: #7b1fa2;
+    margin-bottom: 40px;
+    font-weight: bold;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-   justify-content: center;
-    display: flex;
+    display: flex; /* ضعه أولاً */
+    justify-content: center;
     align-items: center;
 }
